[tool.poetry]
name = "bcdict"
version = "0.2.0"
description = "Python dictionary with broadcast support."
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariushelf/bcdict"
repository = "https://github.com/mariushelf/bcdict"
documentation = "https://github.com/mariushelf/bcdict"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7.1,<4"

[tool.poetry.dev-dependencies]
# testing and linting
pre-commit = "^2.8"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tox = "^3.20.1"

# deployment
twine = "^4.0.0"

# documentation
myst-parser = "^0.17.0"
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-panels = "^0.6.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-mermaid = "^0.7.1"

# required for integration tests and examples:
#pandas = ">1,<1.4"
#scikit-learn = "^1.0.2"

[tool.isort]
profile = "black"
multi_line_output = 3


# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=bcdict --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml --doctest-modules --doctest-continue-on-failure -rA"
testpaths = [
    "tests",
    "bcdict",
]
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
