[tool.poetry]
name = "bcdict"
version = "0.4.0"
description = "Python dictionary with broadcast support."
authors = ["Marius Helf <marius@happyyeti.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariushelf/bcdict"
repository = "https://github.com/mariushelf/bcdict"
documentation = "https://bcdict.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7.1,<4"
importlib-metadata = {version="^4.11.3", python="<3.8"}

# documentation
# Due to the way poetry (and readthedocs) handle package extras (dependencies),
# the doc dependencies must by located here, and not as dev-dependencies.
myst-nb = {version="^0.13.2", optional=true}
Sphinx = {version="^4.5.0", optional=true}
sphinx-autobuild = {version="^2021.3.14", optional=true}
sphinx-panels = {version="^0.6.0", optional=true}
sphinx-rtd-theme = {version="^1.0.0", optional=true}
sphinxcontrib-mermaid = {version="^0.7.1", optional=true}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.4"

# testing and linting
pre-commit = "^2.8"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tox = "^3.20.1"

# deployment
twine = "^4.0.0"

# required for integration tests and examples:
pandas = "=1.3.1"
scikit-learn = "=1.0.2"


[tool.poetry.extras]
docs = [
    "myst-nb",
    'Sphinx',
    'sphinx-autobuild',
    'sphinx-panels',
    'sphinx-rtd-theme',
    'sphinxcontrib-mermaid'
]

[tool.isort]
profile = "black"
multi_line_output = 3


# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=bcdict --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml --doctest-modules --doctest-continue-on-failure -rA"
testpaths = [
    "tests",
    "bcdict",
]
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
